changes to instrument and support Java 11 class files